Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,3 +3,5 @@ files:
     translation: /%two_letters_code%/%original_file_name%
   - source: /en/*.json
     translation: /%two_letters_code%/%original_file_name%
+  - source: /en/home.json
+    translation: /%two_letters_code%/home.json
