Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,7 +1,7 @@
 files:
   - source: /en/*.md
     translation: /%two_letters_code%/%original_file_name%
-  - source: /en/*.json
-    translation: /%two_letters_code%/%original_file_name%
+  - source: /en/api/*.md
+    translation: /%two_letters_code%/api/%original_file_name%
   - source: /en/home.json
-    translation: /%two_letters_code%/home.json
+    translation: /%two_letters_code%/%original_file_name%
